[tool.poetry]
name = "vm-project"
version = "0.1.0"
description = ""
authors = ["sky-sky-code <saidyllapashaev@mail.ru>"]
readme = "README.md"
packages = [{include = "vm_project"}]

[tool.poetry.dependencies]
python = "^3.11"
ujson = "^5.10.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
